bk_ida/gccida/c0/get_attr_i387
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13665:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 13438, "get_attr_i387"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13665:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 13438, "get_attr_i387"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13800:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| mult_operator( recog_data_0.operand[3], SFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13806:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| which_alternative != 2 && mult_operator( recog_data_0.operand[3], SFmode) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13816:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| mult_operator( recog_data_0.operand[3], DFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13822:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| which_alternative != 2 && mult_operator( recog_data_0.operand[3], DFmode) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13834:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| mult_operator( recog_data_0.operand[3], XFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/insn-attrtab.c:13846:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| mult_operator( recog_data_0.operand[3], TFmode) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/get_attr_i387/src/obj/insn-attrtab.o] Error 1
